--- a/Index.html
+++ b/Index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html lang="fa">
-
 <head>
   <meta charset="UTF-8">
   <title>Calendar</title>
   <link rel="stylesheet" href="static/css/main.css">
 </head>
-
 <body>
-
-
   <div class="container">
-<br>
-<br>
-
     <div class="calendar-wrapper">
       <div class="calendar-base">
-
-        <div class="year-wrapper">
-        </div>
-
+        <div class="year-wrapper"></div>
         <div class="months">
           <span class="month-hover month-letter month-letter-1" data-num="1">فروردین</span>
           <span class="month-hover month-letter month-letter-2" data-num="2">اردیبهشت</span>
@@ -34,8 +24,7 @@
           <span class="month-hover month-letter month-letter-11" data-num="11">بهمن</span>
           <span class="month-hover month-letter month-letter-12" data-num="12">اسفند</span>
         </div>
-        <hr class="month-line" />
-
+        <hr class="month-line">
         <div class="days">
           <ul class="weeks">
             <li>شنبه</li>
@@ -48,28 +37,16 @@
             <div class="clearfix"></div>
           </ul>
         </div>
-
         <div class="num-dates"></div>
-
       </div>
-
       <div class="calendar-left active-season">
-
         <div class="num-date">X</div>
         <div class="day">X</div>
-
-
-
       </div>
     </div>
     <div class="clearfix"></div>
-
-
   </div>
-
-
   <script src="static/js/calendarObject.js"></script>
   <script src="static/js/app.js"></script>
 </body>
-
 </html>
